--- a/VRChat/74/1064174.html
+++ b/VRChat/74/1064174.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/23586338c84e10d4269f.js" defer=
     "defer" nonce=
-    "qY9hr/B06yfp2gbYzKVwYd4Iz2iCPSRlu6fjQqHaZ/A="></script>
+    "dOeY5mPhZ8pHHCNJ9LOXymkysIE+d+SuVr+bPmO/UqU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRMのみ】NEKO FANTASY 黒魔道士","description":"VRMアバター　「NEKO FANTASY 黒魔道士」\n\nポリゴン数：7334\n\n5種類のねこちゃんから好きな子を選べます。\n\nリップシンク対応\n感情表現はありませんが「equip」で杖を持ちます。\n\n「all in one package 全部パック」は5種類すべてのVRMファイルと、VRMのカスタマイズができるunitypackageあり。\n\n\n＜更新履歴＞\n2022.02.07　VRM版のみ再販しました。杖を持つシェイプキーを追加。リップシンクを修正しました。","url":"https://booth.pm/ja/items/1064174","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"600","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1064174/4144e390-ce94-4a65-9d95-180a76e19fcf_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qY9hr/B06yfp2gbYzKVwYd4Iz2iCPSRlu6fjQqHaZ/A="></script>
+    nonce="dOeY5mPhZ8pHHCNJ9LOXymkysIE+d+SuVr+bPmO/UqU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -1140,7 +1140,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;},{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;ドールズ・パーティー48&quot;,&quot;value&quot;:&quot;dollsparty48&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;},{&quot;label&quot;:&quot;COMITIA142&quot;,&quot;value&quot;:&quot;comitia142&quot;},{&quot;label&quot;:&quot;立体乱舞3&quot;,&quot;value&quot;:&quot;rittairanbu3&quot;}]"
+    "[{&quot;label&quot;:&quot;#エアブー230108&quot;,&quot;value&quot;:&quot;air-boo-0108&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪123&quot;,&quot;value&quot;:&quot;comiccity-osaka123&quot;},{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;},{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;ドールズ・パーティー48&quot;,&quot;value&quot;:&quot;dollsparty48&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
